--- a/pages/home/destaques.module.css
+++ b/pages/home/destaques.module.css
@@ -8,6 +8,16 @@
     padding-bottom: 80px;
 }
 
+.link{
+    color: black;
+    text-decoration: none;
+}
+
+.link:hover{
+    color: black;
+    text-decoration: none;
+}
+
 .title{
     text-align: center;
     color: white;
@@ -22,6 +32,17 @@
     border-radius: 10px;
     padding: 15px;
     margin: 0 10px 0 10px;
+}
+
+.img{
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: -15px;
+    border-radius: 10px;
+}
+
+.maq{
+    border-radius: 10px 10px 0 0;
 }
 
 .name{
