--- a/pages/estoque/maquinas.module.css
+++ b/pages/estoque/maquinas.module.css
@@ -47,3 +47,51 @@
 .bgtitle{
     text-align: center;
 }
+
+.maq{
+    border-radius: 10px 10px 0 0;
+}
+
+.bgcard{
+    background-color: #fff;
+    box-shadow: 0 0 25px 0 rgb(0 0 0 / 20%);
+    border-radius: 0 0 10px 10px;
+    padding: 20px 10px 10px 10px;
+    margin-top: -10px;
+    
+}
+
+.name{
+    color: black;
+    font-family: "Univers Light";
+    font-size: 25px;
+}
+
+.price{
+    font-family: "Univers Bold";
+    font-size: 30px;
+    color: black;
+}
+
+.link{
+    text-decoration: none;
+}
+
+.description{
+    font-family: "Univers Light";
+    font-size: 20px;
+    color: black;
+}
+
+.button{
+    background-color: #ffc700;
+    color: #000;
+    text-align: center;
+    border: none;
+    border-radius: 8px;
+    font-family: "Univers Bold";
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    width: 100%;
+}
