--- a/pages/estoque/maquinas.module.css
+++ b/pages/estoque/maquinas.module.css
@@ -95,3 +95,75 @@
     margin-top: 10px;
     width: 100%;
 }
+
+.bgtitle{
+    background-color: black;
+    color: white;
+    font-family: "Univers Light";
+    text-transform: uppercase;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 10px 10px 0 0;
+}
+
+.filtrosEsquerda{
+    margin-top: 15px;
+    background-color: #fff;
+    box-shadow: 0 0 25px 0 rgb(0 0 0 / 20%);
+    height: 510px;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+.info{
+    padding: 10px;
+    font-family: "Univers Bold";
+    font-size: 20px;
+}
+
+.selectEsquerda{
+    margin-left: 10px;
+    margin-bottom: 15px;
+    padding: 8px;
+    border-radius: 10px;
+    width: 93%;
+    font-family: "Univers Light";
+    font-size: 22px;
+}
+
+.buttonBuscar{
+    background-color: #ffc700;
+    text-align: center;
+    width: 93%;
+    font-family: "Univers Bold";
+    border: none;
+    font-size: 20px;
+    text-transform: uppercase;
+    padding: 5px 30px 5px 30px;
+    border-radius: 8px;
+    transition: 0.3s;
+}
+
+.buttonBuscar:hover{
+    background-color: black;
+    color: white;
+    transition: 0.3s;
+}
+
+.divButton{
+    text-align: center;
+}
+
+.titleEsquerda{
+    font-family: "Univers Bold";
+    text-transform: uppercase;
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+.textEsquerda{
+    font-family: "Univers Condensed";
+    font-size:  20px;
+    margin-top: 20px;
+    text-align: justify;
+}
