--- a/pages/estoque/banner.module.css
+++ b/pages/estoque/banner.module.css
@@ -15,3 +15,9 @@
     font-size: 35px;
     text-align: center;
 }
+
+@media(max-width: 600px){
+    .bgbanner{
+        margin-top: 70px;
+    }
+}
