--- a/pages/estoque/maquinas.module.css
+++ b/pages/estoque/maquinas.module.css
@@ -167,3 +167,13 @@
     margin-top: 20px;
     text-align: justify;
 }
+
+@media (max-width: 600px){
+    .filtro{
+        margin-bottom: 20px;
+    }
+
+    .exibicao{
+        text-align: left !important;
+    }
+}
