--- a/pages/home/banner.module.css
+++ b/pages/home/banner.module.css
@@ -34,3 +34,9 @@
     background-color: white;
     transition: 0.3s;
 }
+
+@media(max-width: 600px){
+    .title{
+        font-size: 60px;
+    }
+}
