--- a/pages/home/cards.module.css
+++ b/pages/home/cards.module.css
@@ -65,3 +65,13 @@
     color: white;
     transition: 0.3s;
 }
+
+@media(max-width: 600px){
+    .card{
+        margin: 0 10px 0 10px;
+    }
+
+    .card2{
+        margin: 20px 10px 0 10px;
+    }
+}
