--- a/pages/home/seminovos.module.css
+++ b/pages/home/seminovos.module.css
@@ -44,3 +44,10 @@
     color: white;
     transition: 0.2s;
 }
+
+@media(max-width: 600px){
+    .title{
+        font-size: 45px;
+        line-height: 50px;
+    }
+}
