--- a/pages/home/vantagens.module.css
+++ b/pages/home/vantagens.module.css
@@ -45,3 +45,13 @@
     font-size: 20px;
     margin-bottom: 25px;
 }
+
+@media(max-width: 600px){
+    .card{
+        margin: 0 20px 50px 20px;
+    }
+
+    .title{
+        font-size: 35px;
+    }
+}
