--- a/pages/estoque/maquinas.module.css
+++ b/pages/estoque/maquinas.module.css
@@ -110,7 +110,6 @@
     margin-top: 15px;
     background-color: #fff;
     box-shadow: 0 0 25px 0 rgb(0 0 0 / 20%);
-    height: 510px;
     margin-top: 20px;
     border-radius: 10px;
 }
@@ -142,6 +141,7 @@
     padding: 5px 30px 5px 30px;
     border-radius: 8px;
     transition: 0.3s;
+    margin-bottom: 10px;
 }
 
 .buttonBuscar:hover{
