--- a/pages/maquina/detalhes.module.css
+++ b/pages/maquina/detalhes.module.css
@@ -91,3 +91,9 @@
     font-family: "Univers Regular";
     font-size: 20px;
 }
+
+@media(max-width: 600px){
+    .imgmaquina{
+        height: 250px;
+    }
+}
