--- a/pages/estoque/maquinas.module.css
+++ b/pages/estoque/maquinas.module.css
@@ -26,7 +26,8 @@
 .text{
     color: white;
     font-family: "Univers Light";
-    font-size: 20px
+    font-size: 20px;
+    display: flex;
 }
 
 .select{
