--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ a {
 }
 
 @font-face {
-  font-family: "Univers Bold";
+  font-family: "Univers Condensed Bold";
   src: url('../public/fonts/univers-condensed-bold.ttf');
   font-weight: 400;
   font-style: normal;
@@ -33,5 +33,12 @@ a {
   font-family: "Univers Condensed";
   src: url('../public/fonts/UniversCondensed.ttf');
   font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Univers Bold";
+  src: url('../public/fonts/UniversLTStd-BoldCn.otf');
+  font-weight: 900;
   font-style: normal;
 }
