--- a/pages/home/cards.module.css
+++ b/pages/home/cards.module.css
@@ -74,4 +74,12 @@
     .card2{
         margin: 20px 10px 0 10px;
     }
+
+    .title{
+        width: 100%;
+    }
+
+    .title2{
+        width: 100%;
+    }
 }
