--- a/pages/estoque/banner.module.css
+++ b/pages/estoque/banner.module.css
@@ -1,5 +1,5 @@
 .bgbanner{
-    background-image: url("/img/bg-estoque.jpg");
+    background-image: url("/img/bg-estoque-2.jpg");
     padding-top: 85px;
     padding-bottom: 85px;
     background-position: 50%;
