--- a/pages/home/banner.module.css
+++ b/pages/home/banner.module.css
@@ -1,5 +1,5 @@
 .bgbanner{
-    background-image: linear-gradient(90deg,#000 15%,transparent), url("/img/banner-seminovos.jpg");
+    background-image: linear-gradient(90deg,#000 15%,transparent), url("/img/banner-home.jpg");
     background-size: cover;
     padding-top: 214px;
     padding-bottom: 214px;
