--- a/pages/estoque/maquinas.module.css
+++ b/pages/estoque/maquinas.module.css
@@ -177,6 +177,18 @@
     color: black;
 }
 
+.info1{
+    font-family: "Univers Bold";
+    font-size: 18px;
+    color: black;
+}
+
+.info2{
+    font-family: "Univers Light";
+    font-size: 20px;
+    color: black;
+}
+
 @media (max-width: 600px){
     .filtro{
         margin-bottom: 20px;
